# Mock-Agent-Data

./: README.md  pyproject.toml
examples/: flight_basic_usage.py  hotel_search_example.py
src/mock_flight_api/: __init__.py  airline_data.json  api.py  models.py
src/mock_hotel_api/: api.py  hotel_data.json  models.py
