[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-flight-api"
version = "0.1.0"
authors = [
    { name="hcwilk"},
]
description = "A mock flight API for testing travel agent applications"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hcwilk/mock-flight-api"
"Bug Tracker" = "https://github.com/hcwilk/mock-flight-api/issues"
